# COLOR4CONSOLE

./: .gitignore  LICENSE  README.md  setup.cfg
src/color4console/: __init__.py  colorconsole.py  style.py
src/color4console.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
