[metadata]
name = color4console
version = 0.0.1
author = Mahmud Iftekhar Zamil
author_email = chishty113@yahoo.com
description = color4console enables you to print colorful text without wasting time experimenting with various color combinations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mahmud-Iftekhar-Zamil/COLOR4CONSOLE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
